force-app/main/default/objects/Order_Position__c/Order_Position__c.object-meta.xml
<CustomObject>
    <label>Auftragsposition</label>
    <nameField>
        <label>Order Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auftragspositionen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>