force-app/main/default/objects/Order_Position__c/fields/Artikelgruppe__c.field-meta.xml
<CustomField>
    <fullName>Artikelgruppe__c</fullName>
    <formula>Product__r.ItemGroup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Artikelgruppe</label>
    <type>Text</type>
</CustomField>