force-app/main/default/objects/Order_Position__c/fields/GrossPrice__c.field-meta.xml
<CustomField>
    <fullName>GrossPrice__c</fullName>
    <label>Gross Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>